fail_crate/tests/unexpected_after_pub_self.rs
use inew::New;

#[derive(New)]
#[new(pub(self =))]
struct A;

fn main() {}
